tests/typechecker/should_pass/productions_type.csp
channel c : {0}.{1}
datatype X = D.{0}.{1}

test1 = productions(c.0)
test2 = productions(D.0)
