tests/typechecker/should_fail/module_duplicates1.csp
module M(X)

exports
channel c
endmodule

datatype Z = M

instance X = M({})


